--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
     <title>Google Map API v3 Inverted Circle</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false" type="text/javascript"></script>
-    <script src="gmap.inverted.circle.js" type="text/javascript"></script>
+    <script src="./lib/gmap.inverted.circle.js" type="text/javascript"></script>
     <script type="text/javascript">
       var iCircle;
       var map;
@@ -31,8 +31,8 @@ and open the template in the editor.
           editable: true,
           stroke_weight: 5,
           always_fit_to_map: false,
-          resize_updown: '../lib/resize_updown.png',
-          resize_leftright: '../lib/resize_leftright.png'
+          resize_updown: './lib/resize_updown.png',
+          resize_leftright: './lib/resize_leftright.png'
         });
       }
       // Load the map
