--- a/index.html
+++ b/index.html
@@ -13,6 +13,41 @@ and open the template in the editor.
     <script type="text/javascript">
       var iCircle;
       var map;
+
+      /**
+ * The CenterControl adds a control to the map that recenters the map on
+ * Chicago.
+ * This constructor takes the control DIV as an argument.
+ * @constructor
+ */
+function CenterControl(controlDiv, map) {
+  // Set CSS for the control border.
+  const controlUI = document.createElement("div");
+  controlUI.style.backgroundColor = "#fff";
+  controlUI.style.border = "2px solid #fff";
+  controlUI.style.borderRadius = "3px";
+  controlUI.style.boxShadow = "0 2px 6px rgba(0,0,0,.3)";
+  controlUI.style.cursor = "pointer";
+  controlUI.style.marginTop = "8px";
+  controlUI.style.marginBottom = "22px";
+  controlUI.style.textAlign = "center";
+  controlUI.title = "Click to recenter the map";
+  controlDiv.appendChild(controlUI);
+  // Set CSS for the control interior.
+  const controlText = document.createElement("div");
+  controlText.style.color = "rgb(25,25,25)";
+  controlText.style.fontFamily = "Roboto,Arial,sans-serif";
+  controlText.style.fontSize = "16px";
+  controlText.style.lineHeight = "38px";
+  controlText.style.paddingLeft = "10px";
+  controlText.style.paddingRight = "10px";
+  controlText.innerHTML = "Voir les commerces ici";
+  controlUI.appendChild(controlText);
+  // Setup the click event listeners: simply set the map to Chicago.
+  controlUI.addEventListener("click", () => {
+    map.setCenter(chicago);
+  });
+}
     
       function initialize() {
         var mapDiv = document.getElementById('gMap');
@@ -23,24 +58,38 @@ and open the template in the editor.
         });
 
  
-
+/*
         iCircle = new InvertedCircle({
           center: map.getCenter(),
           map: map,
           radius: 5000, // 5 km
           editable: true,
-          stroke_weight: 5,
+          stroke_weight: 1,
           always_fit_to_map: false,
           resize_updown: './lib/resize_updown.png',
           resize_leftright: './lib/resize_leftright.png' 
+        });*/
+
+        map.addListener("center_changed", () => {
+          //iCircle.setCenter(map.getCenter());
+          //iCircle.setVisible(false)
         });
+
+        // Create the DIV to hold the control and call the CenterControl()
+      // constructor passing in this DIV.
+      const centerControlDiv = document.createElement("div");
+      CenterControl(centerControlDiv, map);
+      map.controls[google.maps.ControlPosition.TOP_CENTER].push(centerControlDiv);
       }
       // Load the map
       google.maps.event.addDomListener(window, 'load', initialize);
+
+      
     </script>
   </head>
 
   <body>
-	<div id="gMap" style="width: 100%;height: 100%;"></div>
+	<div id="gMap" style="width: 100%;height: 100%;">
+  </div>
   </body>
 </html>
