--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
     <script src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false" type="text/javascript"></script>
     <script src="./lib/gmap.inverted.circle.js" type="text/javascript"></script>
     <script type="text/javascript">
-      var iCircle;
+      var currentRadiusCircle, targetRadiusCircle;
       var map;
 
       /**
@@ -59,7 +59,7 @@ function CenterControl(controlDiv, map, iCircle) {
 
  
 
-        iCircle = new InvertedCircle({
+        currentRadiusCircle = new InvertedCircle({
           center: map.getCenter(),
           map: map,
           radius: 5000, // 5 km
@@ -70,7 +70,7 @@ function CenterControl(controlDiv, map, iCircle) {
           resize_leftright: './lib/resize_leftright.png' 
         });
 
-        i2Circle = new InvertedCircle({
+        targetRadiusCircle = new InvertedCircle({
           center: map.getCenter(),
           map: map,
           radius: 5000, // 2.5 km
@@ -82,14 +82,14 @@ function CenterControl(controlDiv, map, iCircle) {
         });
 
         map.addListener("center_changed", () => {
-          i2Circle.setCenter(map.getCenter());
+          targetRadiusCircle.setCenter(map.getCenter());
           //iCircle.setVisible(false)
         });
 
         // Create the DIV to hold the control and call the CenterControl()
         // constructor passing in this DIV.
         const centerControlDiv = document.createElement("div");
-        CenterControl(centerControlDiv, map, iCircle);
+        CenterControl(centerControlDiv, map, currentRadiusCircle);
         map.controls[google.maps.ControlPosition.TOP_CENTER].push(centerControlDiv);
       }
       // Load the map
