--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ and open the template in the editor.
   <head>
     <title>Google Map API v3 Inverted Circle</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false" type="text/javascript"></script>
+    <script src="https://maps.google.com/maps/api/js?libraries=geometry&sensor=false&" type="text/javascript"></script>
     <script src="./lib/gmap.inverted.circle.js" type="text/javascript"></script>
     <script type="text/javascript">
       var currentRadiusCircle, targetRadiusCircle;
@@ -60,7 +60,7 @@ function CenterControl(controlDiv, map, callback) {
         });
 
  
-
+/*
         currentRadiusCircle = new InvertedCircle({
           center: map.getCenter(),
           map: map,
@@ -74,7 +74,7 @@ function CenterControl(controlDiv, map, callback) {
           draggable:false,
           fill_opacity:0,
           stroke_color:"gray"
-        });
+        });*/
 
         targetRadiusCircle = new InvertedCircle({
           center: map.getCenter(),
