--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@ and open the template in the editor.
 function CenterControl(controlDiv, map, callback) {
   // Set CSS for the control border.
   const controlUI = document.createElement("div");
-  controlUI.style.backgroundColor = "#fff";
-  controlUI.style.border = "2px solid #fff";
+  controlUI.style.backgroundColor = "#e0ac08";
+  controlUI.style.border = "none";
   controlUI.style.borderRadius = "3px";
+  controlUI.style.fontWeight = "semi-bold";
   controlUI.style.boxShadow = "0 2px 6px rgba(0,0,0,.3)";
   controlUI.style.cursor = "pointer";
   controlUI.style.marginTop = "8px";
@@ -39,8 +40,8 @@ function CenterControl(controlDiv, map, callback) {
   controlText.style.fontFamily = "Roboto,Arial,sans-serif";
   controlText.style.fontSize = "16px";
   controlText.style.lineHeight = "38px";
-  controlText.style.paddingLeft = "10px";
-  controlText.style.paddingRight = "10px";
+  controlText.style.paddingLeft = "15px";
+  controlText.style.paddingRight = "15px";
   controlText.innerHTML = "Voir les commerces ici";
   controlUI.appendChild(controlText);
   // Setup the click event listeners: simply set the map to Chicago.
@@ -103,7 +104,7 @@ function CenterControl(controlDiv, map, callback) {
         CenterControl(centerControlDiv, map, function(){
           currentRadiusCircle.setCenter(targetRadiusCircle.getCenter())
         });
-        map.controls[google.maps.ControlPosition.TOP_CENTER].push(centerControlDiv);
+        map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(centerControlDiv);
       }
       // Load the map
       google.maps.event.addDomListener(window, 'load', initialize);
