--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ function CenterControl(controlDiv, map, callback) {
       function initialize() {
         var mapDiv = document.getElementById('gMap');
         map = new google.maps.Map(mapDiv, {
-          center: new google.maps.LatLng(37.4419, -122.1419),
+          center: new google.maps.LatLng(46.22754032144894,6.103579520901481),
           zoom: 13,
           mapTypeId: google.maps.MapTypeId.ROADMAP
         });
