--- a/index.html
+++ b/index.html
@@ -60,29 +60,12 @@ function CenterControl(controlDiv, map, callback) {
           mapTypeId: google.maps.MapTypeId.ROADMAP
         });
 
- 
-/*
-        currentRadiusCircle = new InvertedCircle({
-          center: map.getCenter(),
-          map: map,
-          radius: 5000, // 5 km
-          editable: false,
-          stroke_weight: 1,
-          always_fit_to_map: false,
-          resize_updown: './lib/resize_updown.png',
-          resize_leftright: './lib/resize_leftright.png' ,
-          center_marker_visible:false,
-          draggable:false,
-          fill_opacity:0,
-          stroke_color:"gray"
-        });*/
-
         targetRadiusCircle = new InvertedCircle({
           center: map.getCenter(),
           map: map,
-          radius: 5000, // 2.5 km
+          radius: 5000, // in m
           editable: false,
-          stroke_weight: 3,
+          stroke_weight: 2,
           always_fit_to_map: false,
           stroke_color:'#e0ac08',
           //fill_opacity:0.3,
@@ -91,12 +74,6 @@ function CenterControl(controlDiv, map, callback) {
           center_marker_visible:true
         });
 
-/*
-        //center_changed
-        map.addListener("bounds_changed", () => {
-          targetRadiusCircle.setCenter(map.getCenter());
-          //iCircle.setVisible(false)
-        });*/
 
         // Create the DIV to hold the control and call the CenterControl()
         // constructor passing in this DIV.
@@ -105,6 +82,12 @@ function CenterControl(controlDiv, map, callback) {
           currentRadiusCircle.setCenter(targetRadiusCircle.getCenter())
         });
         map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(centerControlDiv);
+
+        const centerControlDiv2 = document.createElement("div");
+        CenterControl(centerControlDiv2, map, function(){
+          currentRadiusCircle.setCenter(targetRadiusCircle.getCenter())
+        });
+         map.controls[google.maps.ControlPosition.BOTTOM_CENTER].push(centerControlDiv2);
       }
       // Load the map
       google.maps.event.addDomListener(window, 'load', initialize);
